# faasd-in-rust

./: .env  diesel.toml  flake.nix
.config/: hakari.toml
.github/workflows/: feishu-bot.yml  feishu_bot.yml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/cni/: Cargo.toml
crates/cni/src/: cni_network.rs  lib.rs  util.rs
crates/faas-containerd/: Cargo.toml
crates/faas-containerd/src/: consts.rs  lib.rs  main.rs
crates/faas-containerd/src/impls/: cni.rs  container.rs  function.rs  mod.rs  namespace.rs  oci_image.rs  snapshot.rs  spec.rs  task.rs
crates/faas-containerd/src/impls/cni/: cni_impl.rs  command.rs  mod.rs
crates/faas-containerd/src/provider/: mod.rs
crates/faas-containerd/src/provider/function/: delete.rs  deploy.rs  list.rs  mod.rs  namespace.rs  resolve.rs  status.rs  update.rs
crates/faas-containerd/src/provider_impl/: mod.rs
crates/faas-containerd/src/provider_impl/function/: resolve.rs
crates/faas-containerd/tests/: integration.rs  integration_test.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: lib.rs
crates/gateway/src/bootstrap/: mod.rs
crates/gateway/src/handlers/: function.rs  namespace.rs  proxy.rs
crates/gateway/src/models/: db.rs  error.rs  mod.rs  schema.rs
crates/gateway/src/oauth/: auth_handler.rs  error.rs  jwt_utils.rs  middleware.rs  mod.rs  services.rs
crates/gateway/src/provider/: mod.rs
crates/gateway/src/proxy/: builder.rs  mod.rs  proxy_handler.rs
crates/gateway/src/types/: config.rs  function.rs
crates/my-workspace-hack/: Cargo.toml
crates/provider/: Cargo.toml
crates/provider/src/: consts.rs  lib.rs
crates/provider/src/auth/: middleware.rs  mod.rs
crates/provider/src/bootstrap/: mod.rs
crates/provider/src/handlers/: delete.rs  deploy.rs  mod.rs  (+7 more)
crates/service/: Cargo.toml
crates/service/src/: containerd_manager.rs  image_manager.rs  lib.rs  spec.rs  systemd.rs
docs/: database-quickstart.md  frontend-quickstart.md  openapi.yaml
migrations/2025-06-01-105244_create_users/: up.sql
web/: CHANGELOG_V2.md  DEPLOYMENT.md  FRONTEND_REWRITE_NOTES.md  QUICKSTART.md  README.MD  README.md  README_V2.md  package.json  pnpm-lock.yaml  vite.config.js  vite.config.ts
web/src/: App.jsx  App.tsx  debounce.jsx  deploy.jsx  form.jsx  form.tsx  function.jsx  function.tsx  http.js  http.ts  login.jsx  login.tsx  mainpage.jsx  mainpage.tsx  output.jsx  output.tsx  register.jsx  register.tsx  user.jsx  user.tsx
web/src/.backup/: App.tsx  debounce.tsx  function.tsx  login.tsx  mainpage.tsx  register.tsx  user.tsx
web/src/types/: index.ts
(+21 files in other folders)
