[package]
name = "faas-containerd"
version = "0.1.0"
edition = "2024"

[dependencies]
containerd-client = "0.8"
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
prost-types = "0.13.4"
oci-spec =  "0.6" 
sha2 = "0.10"
hex = "0.4"
my-workspace-hack = { version = "0.1", path = "../my-workspace-hack" }
gateway = { path = "../gateway" }
cni = { version = "0.1", path = "../cni" }
handlebars= "4.1.0"
lazy_static = "1.4"
tokio-util = {version ="0.7.15" , features = ["full"]}
container_image_dist_ref = "0.3.0"
url = "2.4"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
